rustdocs/errors/rust-bitcoin-p2p-src-message_bloom.rs.txt
error[E0433]: failed to resolve: unresolved import
 --> ../rust-bitcoin/p2p/src/message_bloom.rs:7:5
  |
7 | use alloc::vec::Vec;
  |     ^^^^^
  |     |
  |     unresolved import
  |     help: a similar path exists: `std::alloc`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/p2p/src/message_bloom.rs:11:5
   |
11 | use bitcoin::consensus::{encode, Decodable, Encodable, ReadExt};
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
 7 + extern crate bitcoin;
   |

error[E0432]: unresolved import `io`
  --> ../rust-bitcoin/p2p/src/message_bloom.rs:12:5
   |
12 | use io::{BufRead, Write};
   |     ^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::io`

error[E0432]: unresolved import `crate::consensus`
  --> ../rust-bitcoin/p2p/src/message_bloom.rs:14:12
   |
14 | use crate::consensus::impl_consensus_encoding;
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
   |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
   |
 7 + extern crate consensus;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/p2p/src/message_bloom.rs:43:79
   |
43 | ...t<usize, io::Error> {
   |             ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
43 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
43 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
   |
help: consider importing this module
   |
 7 + use std::io;
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
